SECOND commit index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <p>
             Studies show that whille most people never really experience anything <br>
             paranormal, they still believe in it.
+            BUT INSOMNIACS NOT, SINCE THEYRE ]ALWAYS UP AT NIGHT.
         </p>
     </body>
 </html>
